# neuralnet-game

./: .gitignore  README.md  pyproject.toml  requirements.txt
NEURALNET-GAME/: __main__.py
NEURALNET-GAME/Sprites/: player.py
NEURALNET-GAME/UTIL/: coord_converter.py
models/: model_0.pt  model_100.pt  model_200.pt  model_300.pt  model_400.pt  model_500.pt  model_600.pt  model_700.pt  model_800.pt  model_900.pt  pretrained-model.pt
neuralnetgame/: DQN.py  ReplayMemory.py  __main__.py
neuralnetgame/Environment/: Environment.py
neuralnetgame/Environments/: SimEnvironment.py  __init__.py
neuralnetgame/Sprites/: Sprites.py
neuralnetgame/UTIL/: __init__.py  coord_converter.py  plotting.py  replay.py  replay_viewer.py
src/neuralnetgame/: __init__.py  __main__.py
src/neuralnetgame/Environment/: Environment.py
src/neuralnetgame/Environments/: SimEnvironment.py  __init__.py
src/neuralnetgame/Sprites/: Sprites.py
tests/: __init__.py  test_SimEnvironment.py  test_coord_converter.py
tests/UTIL/: test_coord_converter.py
