[tool.poetry]
name = "neuralnetgame"
version = "0.1.0"
description = ""
authors = ["Mikeymoo5 <moodids@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
